# instant-ngp-experiments

./: .gitattributes  pyproject.toml  video_test.bat  video_test.sh
data/raw/desk_setup/: IMG_0174.MOV
scripts/: colmap2nerf.py
