[tool.poetry]
name = "instant-ngp-explorations"
version = "0.1.0"
description = "fork of instant-ngp from nvidia to make it easier to use and setup on Windows"
authors = ["parametrization <parametrization@gmail.com>"]
readme = "README.md"
packages = [{include = "instant_ngp_explorations"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
